@@ -1,3 +1,8 @@
+Thu Jan 29 11:54:22 2009  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* lib/date.rb (today,now): should produce own instances.
+	  [ruby-talk:317020]
+
 Wed Jan 28 22:51:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_mod_modfunc): method undefined in included module
